# inquirer-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  pyproject.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  conformance.yml  release.yml
conformance/: .gitignore  run.py  scenario.md
conformance/drivers/go/: go.mod  go.sum  main.go
conformance/drivers/python/: driver.py
conformance/drivers/rust/: Cargo.toml
conformance/drivers/rust/src/: main.rs
conformance/drivers/typescript/: driver.mjs  fixture.jsonl
extensions/: README.md
extensions/cargo-deps/: Cargo.toml
extensions/cargo-deps/src/: main.rs
extensions/create-inquirer-app/: package-lock.json  package.json
extensions/create-inquirer-app/src/: index.js
extensions/cz-ai/: index.cjs  package-lock.json  package.json
extensions/cz-inquirer-ai/: index.js  package-lock.json  package.json
extensions/cz-teamcz/: __init__.py  pyproject.toml
extensions/cz-teamcz/teamcz/: __init__.py  teamcz.py
extensions/generator-inquirer-app/: package-lock.json  package.json
extensions/generator-inquirer-app/generators/app/: index.js
extensions/gh-contribute/: go.mod  go.sum  main.go
extensions/iqai/: Cargo.toml
extensions/iqai/src/: main.rs
go/: .golangci.yml  README.md  go.mod  go.sum
go/examples/demo/: main.go
go/prompt/: agent.go  autocomplete.go  boundary_test.go  callback_order_test.go  callbacks.go  chaos_test.go  checkbox.go  choice.go  confirm.go  coverage_test.go  cross_language_test.go  doc.go  editor.go  errorpath_test.go  errors.go  errors_test.go  expand.go  fuzz_test.go  integration_test.go  keys.go  mode.go  number.go  password.go  path.go  prompt_test.go  property_test.go  protocol_contract_test.go  rawlist.go  review_fixes_test.go  search.go  search_fuzz_test.go  select.go  socket.go  socket_test.go  stdin.go  style.go  text.go  theme.go  tui_boundary_test.go  tui_checkbox.go  (+4 more)
go/prompt/testdata/socket_multi/: main.go
go/prompt/testdata/socket_number/: main.go
go/prompt/testdata/socket_select/: main.go
go/prompt/testdata/socket_text/: main.go
python/: README.md  pyproject.toml
python/examples/: create_project.py
python/src/inquirer_ai/: __init__.py  choice.py  core.py  exceptions.py  mode.py  socket_transport.py  theme.py  version.py
python/src/inquirer_ai/compat/: questionary.py
python/src/inquirer_ai/prompts/: __init__.py  autocomplete.py  base.py  checkbox.py  choice_base.py  confirm.py  editor.py  expand.py  number.py  password.py  path.py  rawlist.py  search.py  select.py  text.py
python/tests/: conftest.py  test_agent_integration.py  test_async.py  test_autocomplete.py  test_boundary.py  test_callback_order.py  test_chaos.py  test_checkbox.py  test_choice.py  test_compat_questionary.py  test_confirm.py  test_contract_fixes.py  test_core.py  test_cross_language_consistency.py  test_edge_cases.py  test_editor.py  test_expand.py  test_fuzz.py  test_mode.py  test_number.py  test_password.py  test_path.py  test_property.py  test_protocol_contract.py  test_rawlist.py  test_search.py  test_search_async.py  test_select.py  test_socket_inprocess.py  test_socket_transport.py  test_text.py  test_transformer_when.py  test_tui_boundary.py  test_tui_terminal.py  test_type_inference.py
python/tests/helpers/: tui.py
rust/: Cargo.toml  README.md
rust/examples/: socket_test_helper.rs
rust/src/: agent.rs  choice.rs  errors.rs  lib.rs  mode.rs  socket.rs  terminal.rs  theme.rs
rust/src/prompts/: autocomplete.rs  checkbox.rs  confirm.rs  editor.rs  expand.rs  mod.rs  number.rs  password.rs  path.rs  rawlist.rs  search.rs  select.rs  text.rs
rust/tests/: agent.rs  boundary.rs  callback_order.rs  chaos.rs  choice.rs  cross_language.rs  errors.rs  property.rs  protocol_contract.rs  search_concurrency.rs  socket.rs  theme.rs  tui_boundary.rs  tui_rendering.rs  validation.rs
spec/: protocol.md  socket-transport.md
typescript/: README.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
typescript/src/: agent.ts  choice.ts  errors.ts  index.ts  mode.ts  socket.ts  terminal.ts  theme.ts  version.ts
typescript/src/prompts/: autocomplete.ts  base.ts  checkbox.ts  confirm.ts  editor.ts  expand.ts  number.ts  password.ts  path.ts  rawlist.ts  search.ts  select.ts  text.ts
typescript/tests/: agent.test.ts  boundary.test.ts  callback-order.test.ts  chaos.test.ts  choice.test.ts  contract-fixes.test.ts  cross-language.test.ts  errors.test.ts  property.test.ts  protocol-contract.test.ts  search-async.test.ts  socket.test.ts  theme.test.ts  tui-boundary.test.ts  tui-terminal.test.ts  validation.test.ts
typescript/tests/helpers/: tui.ts
