[project]
name = "inquirer-ai"
version = "0.1.0"
description = "Interactive CLI prompts for both humans and AI agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "sherlock49b", email = "chenyinfeng50@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["cli", "interactive", "prompt", "agent", "ai", "inquirer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    "prompt-toolkit>=3.0",
]

[project.urls]
Homepage = "https://github.com/sherlock49b/inquirer-ai"
Repository = "https://github.com/sherlock49b/inquirer-ai"
Issues = "https://github.com/sherlock49b/inquirer-ai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
