[project]
name = "inquirer-ai"
version = "0.3.2"
description = "Interactive CLI prompts for both humans and AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "sherlock49b", email = "chenyinfeng50@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["cli", "interactive", "prompt", "agent", "ai", "inquirer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    "prompt-toolkit>=3.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/sherlock49b/inquirer-ai"
Repository = "https://github.com/sherlock49b/inquirer-ai"
Issues = "https://github.com/sherlock49b/inquirer-ai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedFunction = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=inquirer_ai --cov-fail-under=80"

[tool.coverage.run]
omit = ["src/inquirer_ai/socket_transport.py"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "RUF001",  # ambiguous unicode — we use ❯ ◉ ◯ ✓ intentionally
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pyright>=1.1.409",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.11",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pyright>=1.1.409",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.11",
]
