[package]
name = "inquirer-ai"
version = "0.2.1"
edition = "2021"
description = "Dual-mode interactive CLI prompts — terminal UI for humans, JSON line protocol for AI agents"
license = "MIT"
repository = "https://github.com/sherlock49b/inquirer-ai"
keywords = ["cli", "prompt", "interactive", "terminal", "ai"]
categories = ["command-line-interface"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"

[dev-dependencies]
proptest = "1"
