[package]
name = "cargo-deps"
version = "0.1.0"
edition = "2021"
description = "Interactive dependency management for Cargo — search, add, remove crates interactively"
license = "MIT"
repository = "https://github.com/sherlock49b/inquirer-ai"

[[bin]]
name = "cargo-deps"
path = "src/main.rs"

[dependencies]
inquirer-ai = { path = "../../rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
ureq = "3"
